# starlink_tam

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  demo.py  pyproject.toml  requirements.txt
config/: default.yaml  distribution.yaml
starlink_tam/: __init__.py  __main__.py  cli.py  version.py
starlink_tam/models/: __init__.py  config.py  country.py  market.py  simulation.py  valuation.py
starlink_tam/utils/: __init__.py  config.py  data.py  logger.py  visualization.py
tests/: basic_test.py
